@@ -1,4 +1,4 @@
-FROM amazoncorretto:17-alpine-jdk
+FROM amazoncorretto:21-alpine-jdk
 ENV TZ=Asia/Shanghai
 RUN ln -snf /usr/share/zoneinfo/$TZ /etc/localtime && echo $TZ > /etc/timezone
 VOLUME /tmp
@@ -9,4 +9,4 @@ ADD target/*SNAPSHOT.jar app.jar
 
 EXPOSE 8081
 
-ENTRYPOINT  ["java", "-jar", "/application/app.jar"]
+ENTRYPOINT  ["java","-XX:+UseZGC","-XX:+AlwaysPreTouch", "-jar", "/application/app.jar"]
